# rust.fun

./: Cargo.toml  LICENSE  README.md
01_init_tests/: Cargo.toml
02_permutations/: Cargo.toml  README.md
02_permutations/src/: main.rs
03_traits/src/: main.rs
04_permutations_with_progressbar/: Cargo.toml
04_permutations_with_progressbar/src/: main.rs
05_json/: Cargo.toml  README.md
05_json/resources/: simple.json  simple2.json
05_json/src/: main.rs
06_binary_tree/: README.md
06_binary_tree/src/: main.rs
07_packages/: README.md
07_packages/my-bin/: Cargo.toml
07_packages/my-bin/src/: main.rs
07_packages/my-lib/src/: binary_tree.rs  dummy.rs  lib.rs
08_rest/server/: Cargo.toml
08_rest/server/src/: main.rs
08_rest/types/: Cargo.toml  generateAll.sh
08_rest/types/codegen/: config.json
08_rest/types/codegen/templates/: rust_types.mako  rust_types_json_test.mako  rust_types_test.mako
08_rest/types/models/: layer.yaml
08_rest/types/resources/randomLists/: Color.json  DisplayConfig.json  DisplayConfigFill.json  DisplayConfigStroke.json  Geometry.json  Layer.json  LayerContent.json  LayerContentData.json  LayerDummyEnumEnum.json  PointGeometry.json  PointGeometryArray.json  PointGeometryArrayArray.json  PointGeometryArrayArrayArray.json
08_rest/types/resources/randomObj/: Color.json  DisplayConfig.json  DisplayConfigFill.json  DisplayConfigStroke.json  Geometry.json  Layer.json  LayerContent.json  LayerContentData.json  PointGeometry.json  PointGeometryArray.json  PointGeometryArrayArray.json  PointGeometryArrayArrayArray.json
08_rest/types/src/: layer.rs  layer_json_test.rs  layer_json_test_static.rs  layer_manual_tests.rs  layer_test.rs  layer_test.txt  lib.rs
09_permutations_async/: Cargo.toml  README.md
09_permutations_async/src/: main.rs
10_logging/: Cargo.toml  README.md
10_logging/src/: logging.yaml  main.rs
11_permutations_func/: Cargo.toml
11_permutations_func/src/: main.rs
12_rabbitmq/: Cargo.toml  README.md
12_rabbitmq/docs/: architecture.puml  sequence.puml
12_rabbitmq/src/: main.rs
12_rabbitmq/src/lib/: easy_client.rs  lib.rs  rabbit_client.rs  rabbit_publisher.rs
13_tinyhttp/: Cargo.toml  Dockerfile.app  Dockerfile.testrunner  README.md  buildImage.sh  integration-test-env.yaml  integration_tests.sh
13_tinyhttp/src/: main.rs
13_tinyhttp/src/lib/: lib.rs
13_tinyhttp/tests/: README.md  docker_tests.rs  test_server.rs
14_udp/: Cargo.toml
14_udp/src/lib/: lib.rs
15_trait_refs/: Cargo.toml
15_trait_refs/src/: main.rs
16_channels/: Cargo.toml
16_channels/src/: main.rs
init_tests/src/: main.rs
permutations/src/: main.rs
