[workspace]

members = [
    "01_init_tests",
    "02_permutations",
    "03_traits",
    "04_permutations_with_progressbar",
    "05_json",
    "06_binary_tree",
    "07_packages/my-bin",
    "07_packages/my-lib",
    "08_rest/types",
    "08_rest/server",
    "09_permutations_async",
    "10_logging",
    "11_permutations_func",
    "12_rabbitmq",
    "13_tinyhttp",
]