[package]
name = "rabbitmq-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rabbit_client_impl"
path = "src/lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "my_rabbit_client"
path = "src/bin/main.rs"


[dependencies]
amqprs = "1.4.0"
async-trait = "0.1.73"
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
tokio = "1.29.1"
