[package]
name = "tinyhttp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "my_http_impl"
path = "src/lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "my_http_server"
path = "src/bin/main.rs"


[dependencies]
tiny_http = "0.12.0"
clap = { version = "4.3.0", features = ["derive"] }
ureq = "2.7.1"
env_logger = "0.10.0"
log = "0.4.19"
regex = "1.9.1"
