[package]
name = "udp"
version = "0.1.0"
edition = "2021"

[lib]
name = "my_udp_worker_impl"
path = "src/lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "my_udp_worker"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
tokio = "1.29.1"

